유저 데이터 뿌리기기

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "paths": {
+      "@db/*": ["src/db/*"]
+    },
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
